--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,12 @@ Description: Portfolio/CV/Resume HTML Template
 /*                      BASE                              
 /*=================================================================*/
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-
+body {
+    background-color: #353353;
+}
 html {
   margin: 0 !important;
   overflow: auto !important;
